Fixing bug 336216, tabs don't do mouse tracking correctly across key window changes. Patch by Aaron Schulman <aschulm@gmail.com>, r=stuart.morgan, sr=pink